content/_generated-doc/3.0/config/quarkus-package-pkg-package-config.adoc

:summaryTableId: quarkus-package-pkg-package-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-package-pkg-package-config_configuration]]link:#quarkus-package-pkg-package-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.type]]`link:#quarkus-package-pkg-package-config_quarkus.package.type[quarkus.package.type]`

[.description]
--
The requested output type. 
The default built in types are 'jar' (which will use 'fast-jar'), 'legacy-jar' for the pre-1.12 default jar packaging, 'uber-jar', 'native' and 'native-sources'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`jar`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.manifest.add-implementation-entries]]`link:#quarkus-package-pkg-package-config_quarkus.package.manifest.add-implementation-entries[quarkus.package.manifest.add-implementation-entries]`

[.description]
--
If the Implementation information should be included in the runner jar's MANIFEST.MF.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_MANIFEST_ADD_IMPLEMENTATION_ENTRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_MANIFEST_ADD_IMPLEMENTATION_ENTRIES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.main-class]]`link:#quarkus-package-pkg-package-config_quarkus.package.main-class[quarkus.package.main-class]`

[.description]
--
The entry point of the application. This can either be a fully qualified name of a standard Java class with a main method, or `io.quarkus.runtime.QuarkusApplication`. 
If your application has main classes annotated with `io.quarkus.runtime.annotations.QuarkusMain` then this can also reference the name given in the annotation, to avoid the need to specify fully qualified names in the config.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_MAIN_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_MAIN_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.user-configured-ignored-entries]]`link:#quarkus-package-pkg-package-config_quarkus.package.user-configured-ignored-entries[quarkus.package.user-configured-ignored-entries]`

[.description]
--
Files that should not be copied to the output artifact

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_USER_CONFIGURED_IGNORED_ENTRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_USER_CONFIGURED_IGNORED_ENTRIES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.included-optional-dependencies]]`link:#quarkus-package-pkg-package-config_quarkus.package.included-optional-dependencies[quarkus.package.included-optional-dependencies]`

[.description]
--
List of all the dependencies that have been defined as optional to include into the final package of the application. Each optional dependency needs to be expressed in the following format: 
groupId:artifactId:classifier:type 
With the classifier and type being optional. 
If the type is missing, the artifact is assumed to be of type `jar`. 
This parameter is optional, if absent, no optional dependencies will be included into the final package of the application. 
For backward compatibility reasons, this parameter is ignored by default and can be enabled by setting the parameter `quarkus.package.filter-optional-dependencies` to `true`. 
This parameter is meant to be used in modules where multi-builds have been configured to avoid getting a final package with unused dependencies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_INCLUDED_OPTIONAL_DEPENDENCIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_INCLUDED_OPTIONAL_DEPENDENCIES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.filter-optional-dependencies]]`link:#quarkus-package-pkg-package-config_quarkus.package.filter-optional-dependencies[quarkus.package.filter-optional-dependencies]`

[.description]
--
Flag indicating whether the optional dependencies should be filtered out or not. 
This parameter is meant to be used in modules where multi-builds have been configured to avoid getting a final package with unused dependencies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_FILTER_OPTIONAL_DEPENDENCIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_FILTER_OPTIONAL_DEPENDENCIES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.runner-suffix]]`link:#quarkus-package-pkg-package-config_quarkus.package.runner-suffix[quarkus.package.runner-suffix]`

[.description]
--
The suffix that is applied to the runner jar and native images

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_RUNNER_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_RUNNER_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`-runner`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.add-runner-suffix]]`link:#quarkus-package-pkg-package-config_quarkus.package.add-runner-suffix[quarkus.package.add-runner-suffix]`

[.description]
--
Indicates whether the generated binary file (uber-jar or native image) should have the runner suffix appended. Turning off the runner suffix in case of the uber-jar package type, the original build system (Maven, Gradle, etc) built JAR will be replaced with the Quarkus built uber JAR.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_ADD_RUNNER_SUFFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_ADD_RUNNER_SUFFIX+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.output-directory]]`link:#quarkus-package-pkg-package-config_quarkus.package.output-directory[quarkus.package.output-directory]`

[.description]
--
The output folder in which to place the output, this is resolved relative to the build systems target directory.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_OUTPUT_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_OUTPUT_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.output-name]]`link:#quarkus-package-pkg-package-config_quarkus.package.output-name[quarkus.package.output-name]`

[.description]
--
The name of the final artifact

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_OUTPUT_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_OUTPUT_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.create-appcds]]`link:#quarkus-package-pkg-package-config_quarkus.package.create-appcds[quarkus.package.create-appcds]`

[.description]
--
Whether to automate the creation of AppCDS. This has no effect when a native binary is needed and will be ignored in that case. Furthermore, this option only works for Java 11{plus} and is considered experimental for the time being. Finally, care must be taken to use the same exact JVM version when building and running the application.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_CREATE_APPCDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_CREATE_APPCDS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.appcds-builder-image]]`link:#quarkus-package-pkg-package-config_quarkus.package.appcds-builder-image[quarkus.package.appcds-builder-image]`

[.description]
--
When AppCDS generation is enabled, if this property is set, then the JVM used to generate the AppCDS file will be the JVM present in the container image. The builder image is expected to have the 'java' binary on its PATH. This flag is useful when the JVM to be used at runtime is not the same exact JVM version as the one used to build the jar. Note that this property is consulted only when `quarkus.package.create-appcds=true` and it requires having docker available during the build.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_APPCDS_BUILDER_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_APPCDS_BUILDER_IMAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.appcds-use-container]]`link:#quarkus-package-pkg-package-config_quarkus.package.appcds-use-container[quarkus.package.appcds-use-container]`

[.description]
--
Whether creation of the AppCDS archive should run in a container if available. 
Normally, if either a suitable container image to create the AppCDS archive inside of can be determined automatically or if one is explicitly set using the `quarkus.package.appcds-builder-image` setting, the AppCDS archive is generated by running the JDK contained in the image as a container. 
If this option is set to `false`, a container will not be used to generate the AppCDS archive. Instead, the JDK used to build the application is also used to create the archive. Note that the exact same JDK version must be used to run the application in this case. 
Ignored if `quarkus.package.create-appcds` is set to `false`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_APPCDS_USE_CONTAINER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_APPCDS_USE_CONTAINER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.user-providers-directory]]`link:#quarkus-package-pkg-package-config_quarkus.package.user-providers-directory[quarkus.package.user-providers-directory]`

[.description]
--
This is an advanced option that only takes effect for the mutable-jar format. 
If this is specified a directory of this name will be created in the jar distribution. Users can place jar files in this directory, and when re-augmentation is performed these will be processed and added to the class-path. 
Note that before reaugmentation has been performed these jars will be ignored, and if they are updated the app should be reaugmented again.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_USER_PROVIDERS_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_USER_PROVIDERS_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.include-dependency-list]]`link:#quarkus-package-pkg-package-config_quarkus.package.include-dependency-list[quarkus.package.include-dependency-list]`

[.description]
--
This option only applies when using fast-jar or mutable-jar. If this option is true then a list of all the coordinates of the artifacts that made up this image will be included in the quarkus-app directory. This list can be used by vulnerability scanners to determine if your application has any vulnerable dependencies.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_INCLUDE_DEPENDENCY_LIST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_INCLUDE_DEPENDENCY_LIST+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.quiltflower.enabled]]`link:#quarkus-package-pkg-package-config_quarkus.package.quiltflower.enabled[quarkus.package.quiltflower.enabled]`

[.description]
--
An advanced option that will decompile generated and transformed bytecode into the 'decompiled' directory. This is only taken into account when fast-jar is used.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_QUILTFLOWER_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_QUILTFLOWER_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.quiltflower.version]]`link:#quarkus-package-pkg-package-config_quarkus.package.quiltflower.version[quarkus.package.quiltflower.version]`

[.description]
--
The version of Quiltflower to use

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_QUILTFLOWER_VERSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_QUILTFLOWER_VERSION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`1.8.1`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.quiltflower.jar-directory]]`link:#quarkus-package-pkg-package-config_quarkus.package.quiltflower.jar-directory[quarkus.package.quiltflower.jar-directory]`

[.description]
--
The directory into which to save the fernflower tool if it doesn't exist

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_QUILTFLOWER_JAR_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_QUILTFLOWER_JAR_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${user.home}/.quarkus`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.write-transformed-bytecode-to-build-output]]`link:#quarkus-package-pkg-package-config_quarkus.package.write-transformed-bytecode-to-build-output[quarkus.package.write-transformed-bytecode-to-build-output]`

[.description]
--
If set to `true`, it will result in the Quarkus writing the transformed application bytecode to the build tool's output directory. This is useful for post-build tools that need to scan the application bytecode - for example for offline code-coverage tools. For example, if using Maven, enabling this feature will result in the classes in `target/classes` being updated with the versions that result after Quarkus has applied its transformations. Setting this to `true` however, should be done with a lot of caution and only if subsequent builds are done in a clean environment (i.e. the build tool's output directory has been completely cleaned).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_WRITE_TRANSFORMED_BYTECODE_TO_BUILD_OUTPUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_WRITE_TRANSFORMED_BYTECODE_TO_BUILD_OUTPUT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.manifest.attributes-attributes]]`link:#quarkus-package-pkg-package-config_quarkus.package.manifest.attributes-attributes[quarkus.package.manifest.attributes]`

[.description]
--
Custom manifest attributes to be added to the main section of the MANIFEST.MF file. An example of the user defined property: quarkus.package.manifest.attributes."Entry-key1"=Value1 quarkus.package.manifest.attributes."Entry-key2"=Value2

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_MANIFEST_ATTRIBUTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_MANIFEST_ATTRIBUTES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-package-pkg-package-config_quarkus.package.manifest.manifest-sections-manifest-sections]]`link:#quarkus-package-pkg-package-config_quarkus.package.manifest.manifest-sections-manifest-sections[quarkus.package.manifest.manifest-sections]`

[.description]
--
Custom manifest sections to be added to the MANIFEST.MF file. An example of the user defined property: quarkus.package.manifest.manifest-sections."Section-Name"."Entry-Key1"=Value1 quarkus.package.manifest.manifest-sections."Section-Name"."Entry-Key2"=Value2

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_PACKAGE_MANIFEST_MANIFEST_SECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_PACKAGE_MANIFEST_MANIFEST_SECTIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|

|===